Refined experience section, upgraded experience, added minor additional information

--- a/cv_main.tex
+++ b/cv_main.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt, a4paper, sans]{moderncv}
 
 \moderncvstyle{banking}
-\moderncvcolor{green}
+\moderncvcolor{blue}
 \nopagenumbers{}
 
 \usepackage[utf8]{inputenc}
@@ -47,13 +47,13 @@
     \vspace*{-20mm}
 
     \begin{center}
-        \begin{tabular}{ c c c c }
+        \begin{tabular}{ c c c }
             \faEnvelopeO\enspace p.guseva00@gmail.com & \faGithub\enspace no-brainer & \faMobile\enspace +7 (905) 588-08-48 \\
         \end{tabular}
     \end{center}
 
     \section{Education}{
-        \customcventry{2018-2022}{BS in Applied Mathematics and Computer Science}{National Research University "Higher School of Economics"}{Moscow, Russia}{}{}{
+        \customcventry{2018-2022}{Bachelor of Science in Applied Mathematics and Computer Science. 3.54/4.33 GPA}{National Research University "Higher School of Economics"}{Moscow, Russia}{}{}{
             \underline{\normalsize Relevant courses:}
 
             \begin{cvcolumns}
@@ -76,14 +76,23 @@
     \section{Experience}{
         \customcventry{Summer 2019}{Software Engineering Intern}{Yandex}{Moscow, Russia}{}{
             \begin{itemize}
-              \item Added iOS support to mobile app signing and distribution service with Django, Fastlane and Ruby scripts
-              \item Decreased app approval time by two days by automatic assignment of reviewers for various application checks
+              \item Built Web API for signing and publishing service for iOS Development teams by teaching myself Ruby and Django REST to automate signing applications with correct company certificates, uploading multiple builds to TestFlight at once, and publish fully tested versions to AppStore. Service development was on pause but I drove the MVP to completion and it was launched company-wide after my internship ended.
+            \end{itemize}
+        }
+        \customcventry{September 2019 -- June 2020}{Teaching Assistant for the Algorithms and Data Structures course}{National Research University "Higher School of Economics"}{Moscow, Russia}{}{
+            \begin{itemize}
+                \item Gave code reviews in thematic contests
+                \item Helped with developing theoretical exercises
             \end{itemize}
         }
     }
 
+    % \section{Relevant Projects}{
+    %    TODO
+    % }
+
     \section{Key Skills}{
-        \cvitem{Programming Languages}{C/C++, Python, SQL, Rust}
+        \cvitem{Programming Languages}{C/C++, Python, SQL, Ruby}
         \cvitem{Frameworks}{Django}
         \cvitem{Utilities}{Git, Docker}
         \cvitem{Languages}{Russian (Native), English (Upper Intermediate), French (Beginner)}
@@ -93,6 +102,7 @@
     \section{Achievements and Awards}{
         \cvitem{2018}{1st degree award in "Lomonosov" olympiad in Mathematics}
         \cvitem{2018}{Prizewinner of Regional Level of Russian National Olympiad in Informatics}
+        \cvitem{2017}{Winner of National Technology Initiative Contest in Wireless Networking}
         \cvitem{2017}{Prizewinner of Regional Level of Russian National Olympiad in Mathematics}
         \cvitem{2017}{3rd degree award in Interregional Olympiad in Informatics and Computer Security}
     }
