Added some more relevant information for 2019 and onwards, removed redundant sections

--- a/cv_main.tex
+++ b/cv_main.tex
@@ -53,7 +53,7 @@
     \end{center}
 
     \section{Education}{
-        \customcventry{2018-2022}{Bachelor of Science in Applied Mathematics and Computer Science. 3.54/4.33 GPA}{National Research University "Higher School of Economics"}{Moscow, Russia}{}{}{
+        \customcventry{2018 -- 2022}{Bachelor of Science in Applied Mathematics and Computer Science. 3.54/4.33 GPA}{National Research University "Higher School of Economics"}{Moscow, Russia}{}{}{
             \underline{\normalsize Relevant courses:}
 
             \begin{cvcolumns}
@@ -76,13 +76,13 @@
     \section{Experience}{
         \customcventry{Summer 2019}{Software Engineering Intern}{Yandex}{Moscow, Russia}{}{
             \begin{itemize}
-              \item Built Web API for signing and publishing service for iOS Development teams by teaching myself Ruby and Django REST to automate signing applications with correct company certificates, uploading multiple builds to TestFlight at once, and publish fully tested versions to AppStore. Service development was on pause but I drove the MVP to completion and it was launched company-wide after my internship ended.
+              \item Built Web API for signing and publishing service for iOS Development teams by teaching myself Ruby and Django REST to automate signing applications with correct company certificates, uploading multiple builds to TestFlight at once, and publish fully tested versions to AppStore. Service development was on pause but I drove the MVP to completion and project was launched company-wide after my internship ended.
             \end{itemize}
         }
         \customcventry{September 2019 -- June 2020}{Teaching Assistant for the Algorithms and Data Structures course}{National Research University "Higher School of Economics"}{Moscow, Russia}{}{
             \begin{itemize}
-                \item Gave code reviews in thematic contests
-                \item Helped with developing theoretical exercises
+                \item Reviewed code in thematic contests
+                \item Graded theoretical exercises
             \end{itemize}
         }
     }
@@ -99,28 +99,30 @@
         \cvitem{Other}{Linux, \LaTeX}
     }
 
+    \section{Additional Activities}{
+        \customcventry{2019 -- 2021}{Evening Data Science and Data Engineering school}{Ozon Masters}{Moscow, Russia}{}{}{
+            \underline{\normalsize Relevant courses:}
+
+            \begin{cvcolumns}
+                \cvcolumn{}{
+                    \begin{itemize}
+                        \item Computational Linear Algebra
+                        \item Big Data and Data Engineering Basics
+                    \end{itemize}
+                }
+                \cvcolumn{}{
+                    \begin{itemize}
+                        \item Machine Learning Basics
+                    \end{itemize}
+                }
+            \end{cvcolumns}
+        }
+    }
+
     \section{Achievements and Awards}{
         \cvitem{2018}{1st degree award in "Lomonosov" olympiad in Mathematics}
         \cvitem{2018}{Prizewinner of Regional Level of Russian National Olympiad in Informatics}
-        \cvitem{2017}{Winner of National Technology Initiative Contest in Wireless Networking}
+        \cvitem{2017}{1st place in National Technology Initiative Contest in Wireless Networking}
         \cvitem{2017}{Prizewinner of Regional Level of Russian National Olympiad in Mathematics}
-        \cvitem{2017}{3rd degree award in Interregional Olympiad in Informatics and Computer Security}
-    }
-
-    \section{Main Interests}{
-        \begin{cvcolumns}
-            \cvcolumn{}{
-                \begin{itemize}
-                    \item Competitive programming
-                    \item Compiler design
-                \end{itemize}
-            }
-            \cvcolumn{}{
-                \begin{itemize}
-                    \item Graph Theory
-                    \item Combinatorics
-                \end{itemize}
-            }
-        \end{cvcolumns}
     }
 \end{document}
