Corrected some grammar&punctuation mistakes

--- a/cv_main.tex
+++ b/cv_main.tex
@@ -76,7 +76,7 @@
     \section{Experience}{
         \customcventry{Summer 2019}{Software Engineering Intern}{Yandex}{Moscow, Russia}{}{
             \begin{itemize}
-              \item Built Web API for signing and publishing service for iOS Development teams by teaching myself Ruby and Django REST to automate signing applications with correct company certificates, uploading multiple builds to TestFlight at once, and publish fully tested versions to AppStore. Service development was on pause but I drove the MVP to completion and project was launched company-wide after my internship ended.
+              \item Built Web API for signing and publishing service for iOS Development teams by teaching myself Ruby and Django REST to automate signing applications with correct company certificates, uploading multiple builds to TestFlight at once, and publish fully tested versions to AppStore. Service development was on pause, but I drove MVP to completion and project was launched company-wide after my internship ended.
             \end{itemize}
         }
         \customcventry{September 2019 -- June 2020}{Teaching Assistant for the Algorithms and Data Structures course}{National Research University "Higher School of Economics"}{Moscow, Russia}{}{
