Added link to github

--- a/cv_main.tex
+++ b/cv_main.tex
@@ -48,7 +48,7 @@
 
     \begin{center}
         \begin{tabular}{ c c c }
-            \faEnvelopeO\enspace p.guseva00@gmail.com & \faGithub\enspace no-brainer & \faMobile\enspace +7 (905) 588-08-48 \\
+            \faEnvelopeO\enspace p.guseva00@gmail.com & \faGithub\enspace \href{https://github.com/no-brainer}{no-brainer} & \faMobile\enspace +7 (905) 588-08-48 \\
         \end{tabular}
     \end{center}
 
