Removed redundant information, added another relevant activity

--- a/cv_main.tex
+++ b/cv_main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt, a4paper, sans]{moderncv}
+\documentclass[10pt, a4paper, sans]{moderncv}
 
 \moderncvstyle{banking}
 \moderncvcolor{blue}
@@ -44,7 +44,7 @@
 
 \begin{document}
     \makecvtitle
-    \vspace*{-20mm}
+    \vspace*{-15mm}
 
     \begin{center}
         \begin{tabular}{ c c c }
@@ -81,22 +81,20 @@
         }
         \customcventry{September 2019 -- June 2020}{Teaching Assistant for the Algorithms and Data Structures course}{National Research University "Higher School of Economics"}{Moscow, Russia}{}{
             \begin{itemize}
-                \item Reviewed code in thematic contests
-                \item Graded theoretical exercises
+                \item Reviewed code in thematic contests and graded theoretical exercises and homeworks.
             \end{itemize}
         }
     }
 
     % \section{Relevant Projects}{
-    %    TODO
+    % TODO
     % }
 
     \section{Key Skills}{
-        \cvitem{Programming Languages}{C/C++, Python, SQL, Ruby}
+        \cvitem{Programming Languages}{C/C++, Python, SQL, Ruby/Rails}
         \cvitem{Frameworks}{Django}
         \cvitem{Utilities}{Git, Docker}
-        \cvitem{Languages}{Russian (Native), English (Upper Intermediate), French (Beginner)}
-        \cvitem{Other}{Linux, \LaTeX}
+        \cvitem{Languages}{Russian (Native), English (Upper Intermediate)}
     }
 
     \section{Additional Activities}{
@@ -117,12 +115,18 @@
                 }
             \end{cvcolumns}
         }
+
+        \customcventry{November 2019}{Participant of state-of-the-art scientific research school by Yandex}{Educational Centre "Sirius"}{Sochi, Russia}{}{
+            \begin{itemize}
+                \item Implemented a simplified version of Amazon Aurora database with PostgreSQL compatibility. My area of responsibility was communication between database nodes and caching. I had to learn asynchronous programming in C to complete this project
+            \end{itemize}
+        }
     }
 
     \section{Achievements and Awards}{
-        \cvitem{2018}{1st degree award in "Lomonosov" olympiad in Mathematics}
+        \cvitem{2018}{1st degree award in "Lomonosov" olympiad in Mathematics (over 3000 participants overall)}
         \cvitem{2018}{Prizewinner of Regional Level of Russian National Olympiad in Informatics}
-        \cvitem{2017}{1st place in National Technology Initiative Contest in Wireless Networking}
+        \cvitem{2017}{1st place in National Technology Initiative Contest in Wireless Networking (over 1000 participants overall)}
         \cvitem{2017}{Prizewinner of Regional Level of Russian National Olympiad in Mathematics}
     }
 \end{document}
