fixed minor typos

--- a/cv_main.tex
+++ b/cv_main.tex
@@ -118,7 +118,7 @@
 
         \customcventry{November 2019}{Participant of state-of-the-art scientific research school by Yandex}{Educational Centre "Sirius"}{Sochi, Russia}{}{
             \begin{itemize}
-                \item Implemented a simplified version of Amazon Aurora database with PostgreSQL compatibility. My area of responsibility was communication between database nodes and caching. I had to learn asynchronous programming in C to complete this project
+                \item Implemented a simplified version of Amazon Aurora database with PostgreSQL compatibility. My area of responsibility was communication between database nodes and caching. I had to learn asynchronous programming in C to complete this project.
             \end{itemize}
         }
     }
