Swapped relevant activities with key skills

--- a/cv_main.tex
+++ b/cv_main.tex
@@ -90,14 +90,7 @@
     % TODO
     % }
 
-    \section{Key Skills}{
-        \cvitem{Programming Languages}{C/C++, Python, SQL, Ruby/Rails}
-        \cvitem{Frameworks}{Django}
-        \cvitem{Utilities}{Git, Docker}
-        \cvitem{Languages}{Russian (Native), English (Upper Intermediate)}
-    }
-
-    \section{Additional Activities}{
+    \section{Relevant Activities}{
         \customcventry{2019 -- 2021}{Evening Data Science and Data Engineering school}{Ozon Masters}{Moscow, Russia}{}{}{
             \underline{\normalsize Relevant courses:}
 
@@ -121,6 +114,13 @@
                 \item Implemented a simplified version of Amazon Aurora database with PostgreSQL compatibility. My area of responsibility was communication between database nodes and caching. I had to learn asynchronous programming in C to complete this project.
             \end{itemize}
         }
+    }
+
+    \section{Key Skills}{
+        \cvitem{Programming Languages}{C/C++, Python, SQL, Ruby/Rails}
+        \cvitem{Frameworks}{Django}
+        \cvitem{Utilities}{Git, Docker}
+        \cvitem{Languages}{Russian (Native), English (Upper Intermediate)}
     }
 
     \section{Achievements and Awards}{
