--- a/cv_main.tex
+++ b/cv_main.tex
@@ -106,7 +106,7 @@
                 \item Implemented automatic app signing with the correct company certificate, bulk uploading to TestFlight, and publishing of fully-tested versions using Django, Flask, and Ruby
             \end{itemize}
         }
-        \customcventry{Oct 2019 -- Mar 2020}{Teaching assistant for the "Discrete mathematics" courses}{National Research University "Higher School of Economics"}{Moscow, Russia}{}{
+        \customcventry{Oct 2019 -- Mar 2020}{Teaching assistant for the "Discrete mathematics" course}{National Research University "Higher School of Economics"}{Moscow, Russia}{}{
             \begin{itemize}
                 \item Mentored over 30 students and led weekly study sessions
                 \item Graded weekly homework
